Attempt at fixing overflow

--- a/indexS.css
+++ b/indexS.css
@@ -91,7 +91,8 @@ text-align: center;
   left:0;
   width: 100%;
   height: 100%;
-  overflow:hidden;
+  overflow-x:hidden;
+  overflow-y: hidden;
 }
 .box-area li{
 position: absolute;
